# lune-doc

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json
docs/: backend-api-plan.md  manual-qa-run.md  (+11 more)
services/api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py  0002_jobs.py  0003_jobs_params.py  0004_users_and_auth.py  0005_link_users_to_files_jobs.py
services/api/src/lunedoc_api/: __init__.py  db.py  main.py  mime.py  owner_token.py  quota.py  settings.py  storage.py
services/api/src/lunedoc_api/auth/: __init__.py  challenge.py  deps.py  email.py  jwt.py  ratelimit.py  refresh.py  schemas.py
services/api/src/lunedoc_api/engines/: __init__.py  compress.py  convert.py  edit.py  merge.py  ocr.py  sign.py  split.py  watermark.py
services/api/src/lunedoc_api/models/: __init__.py  auth_challenge.py  file.py  job.py  me.py  refresh_token.py  user.py
services/api/src/lunedoc_api/routes/: auth.py  files.py  health.py  jobs.py  me.py
services/api/tests/: _pdf_helpers.py  conftest.py  test_auth_challenge_logic.py  test_auth_claim.py  test_auth_email_flow.py  test_auth_email_sender.py  test_auth_jwt.py  test_auth_me.py  test_auth_migration.py  test_auth_refresh.py  test_compress_job.py  test_convert_job.py  test_edit_job.py  test_files.py  test_files_with_user.py  test_health.py  test_me.py  test_merge_job.py  test_ocr_job.py  test_quota.py  test_settings.py  test_sign_job.py  test_split_job.py  test_sweeper.py  test_watermark_job.py
(+76 files in other folders)
