[project]
name = "lunedoc-api"
version = "0.1.0"
description = "Lunedoc backend API — FastAPI + Celery + Postgres."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "pymupdf>=1.24",
    "pytesseract>=0.3.13",
    "pillow>=10",
    "pyjwt>=2.9",
    "email-validator>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lunedoc_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
